Building advanced environment

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -170,10 +170,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import random\n",
+    "class Test():\n",
+    "    def __init__(self, seed = 42):\n",
+    "        random.seed(seed)\n",
+    "        pass\n",
+    "\n",
+    "    def calculate_random_integer(self):\n",
+    "        return random.randint(0,10)\n",
+    "\n",
+    "test = Test()\n",
+    "print(test.calculate_random_integer())\n",
+    "print(test.calculate_random_integer())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[529.39139928   3.46728908  94.18045892]\n",
+      "[487.75187256   3.42589256  94.09070675]\n",
+      "[494.99504627   3.4808667   94.48506379]\n",
+      "[540.18248421   3.61171766  95.24787056]\n",
+      "[467.49528346   3.50463141  94.84114185]\n",
+      "[471.61820685   3.55474162  95.20848748]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import random\n",
+    "\n",
+    "a = np.array([378.31,3.11,92.2])\n",
+    "b = np.array([(0.027160561080834984,0.1938059167167128),(0.015649339243994923,0.05599971858005176),(0.003897539654922594,0.010297427507850577)])\n",
+    "random.seed(7)\n",
+    "\n",
+    "def calculate_next_price(last_value, t):\n",
+    "    avg_gbm, std_gbm = t\n",
+    "    return last_value * np.exp((avg_gbm - (std_gbm ** 2) / 2) + std_gbm * random.normal())\n",
+    "\n",
+    "# Apply calculate_next_price to each element of a with the respective tuple in b\n",
+    "for i in range(6):\n",
+    "    a = calculate_next_price(a, b.T)\n",
+    "    print(a)"
+   ]
   }
  ],
  "metadata": {
