--- a/tests.ipynb
+++ b/tests.ipynb
@@ -621,6 +621,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9],\n",
+       "        [10, 11, 12, 13, 14],\n",
+       "        [15, 16, 17, 18, 19]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "m_init = torch.arange(0,5).unsqueeze(0)\n",
+    "m = torch.clone(m_init)\n",
+    "for  i in range(3):\n",
+    "    m = torch.concatenate((m,m_init+5*(i+1)))\n",
+    "m.flatten().reshape(4,m_init.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
