Final pipeline running

--- a/test_dynamics_model.ipynb
+++ b/test_dynamics_model.ipynb
@@ -115,6 +115,14 @@
       "\u001b[1;32mc:\\Users\\Magnus\\Documents\\GitHub\\cro_symbolic_mbpo\\test_dynamics_model.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Magnus/Documents/GitHub/cro_symbolic_mbpo/test_dynamics_model.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \t\u001b[39mreturn\u001b[39;00m inputs, outputs\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Magnus/Documents/GitHub/cro_symbolic_mbpo/test_dynamics_model.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m device \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdevice(\u001b[39m\"\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mis_available() \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Magnus/Documents/GitHub/cro_symbolic_mbpo/test_dynamics_model.ipynb#W3sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m idxs, experiences \u001b[39m=\u001b[39m replay_buffer\u001b[39m.\u001b[39;49msample()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Magnus/Documents/GitHub/cro_symbolic_mbpo/test_dynamics_model.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m states, actions, rewards, next_states, dones \u001b[39m=\u001b[39m (torch\u001b[39m.\u001b[39mstack(vs,\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39msqueeze(\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mto(device) \u001b[39mfor\u001b[39;00m vs \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mexperiences))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Magnus/Documents/GitHub/cro_symbolic_mbpo/test_dynamics_model.ipynb#W3sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m inputs, outputs \u001b[39m=\u001b[39m format_samples_for_training(states, actions, rewards, next_states)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'UniformReplayBuffer' object has no attribute 'sample'"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
